# rust_template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: format.yml  pre-commit.yml  static_analysis.yml  unit_test.yml
src/: main.rs
wix/: main.wxs
