[dependencies]
clap = {version = "<4.0.0", features = ["derive"]}
env_logger = "0.10.0"
git-version = "0.3.5"
itertools = "0.10.5"
klask = "1.0.0"
log = "0.4.17"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"

[package]
authors = ["Ryan Bartling <ryan.bartling@gmail.com>"]
description = "Hello world rust template"
edition = "2021"
license = "MIT"
name = "rust"
version = "0.1.0"
